fixed mobile spacing

--- a/style.css
+++ b/style.css
@@ -167,4 +167,15 @@ body {
     grid-template-columns: 1fr;
   }
 
+  .square {
+    margin: 0px;
+    min-height: 400px;
+  }
+
+  .stat span {
+    position: absolute;
+    top: 250px;
+    left: 0;
+  }
+
 }
